# open-webui-deep-research-tool

./: CLAUDE.md  README.md  deep_research_pipeline.py  pipe.py  pyproject.toml
