[project]
name = "open-webui-deep-research-tool"
version = "0.1.0"
description = "Deep Research At Home — an Open WebUI pipe that orchestrates multi-cycle web research and synthesis"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "scikit-learn>=1.4",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.10",
    "PyPDF2>=3.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.2",
    "open-webui>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipe.py"]
